made workflow rule generic for both payment and appointment